--- a/index.html
+++ b/index.html
@@ -5,22 +5,68 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Landing page</title>
+  <link rel="stylesheet" href="index.css">
+  </link>
 </head>
 
 <body>
-  <div class:"wraper">
-    <h2 class:"logo">
-      Log<span>o</span>
-    </h2>
-    <nav>
-      <ul class:"navbar">
-        <li>Home</li>
-        <li>About me</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
+  <div class="wraper">
+    <header>
+      <nav class="navbar">
+        <div class="brand">
+          <h2 class="logo">
+            LOG<span>O</span>
+          </h2>
+        </div>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About me</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <div class="about-website">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext goes here under the main tittle. It's a smaller font and the color is the lower
+          contrast.</p>
+        <button class="sign-up">Sign Up</button>
+      </div>
+      <img src="vector/Mesa de trabajo 34.svg" alt="este es mi  svg">
   </div>
+  </main>
+  </div>
+
+  <div class="project">
+
+    <h1 class="tittle">
+      Some random information.
+    </h1>
+
+
+    <div class="imagen">
+      <div>
+        <img src="img/closeup-of-two-young-cats-cuddling-together-at-corner-of-stone-wall.jpg" alt="">
+        <p>this is some subtext ilustration or imagen</p>
+      </div>
+      <div>
+        <img src="img/selective-focus-of-black-and-white-adorable-cat-with-its-tongue-out.jpg" alt="">
+        <p>this is some subtext ilustration or imagen</p>
+      </div>
+      <div>
+        <img src="img/isolated-closeup-shot-of-long-haired-calico-cat-winking-at-the-camera-with-the-tongue-out.jpg"
+          alt="">
+        <p>this is some subtext ilustration or imagen</p>
+      </div>
+      <div>
+        <img src="img/closeup-of-two-young-cats-cuddling-together-at-corner-of-stone-wall.jpg" alt="">
+        <p>this is some subtext ilustration or imagen</p>
+      </div>
+    </div>
+
+  </div>
+
 </body>
 
 </html>
