--- a/index.html
+++ b/index.html
@@ -66,7 +66,33 @@
     </div>
 
   </div>
+  
+  <div class="quote">
+    <div class="thor">
+      <p>
+        This is a inspiring quote, or a testimonial from a  customer.Maybe it's just filling up space, or maybe people will actually read it.Who knows? all i knows is that is look nice.
+      </p>
+      <h1>
+        -Thor, god of thunder.
+      </h1>
+    </div>
+  </div>
 
+  <div class ="sign">
+    <div>
+      <h1>
+        Call to action!It's time.
+      </h1>
+      <p>
+        Sing up for our product by clicking that button right over there!
+      </p>
+    </div>
+    <button class="sign-up">Sign Up</button>
+  </div>
+
+  <footer>  
+    <p>Copyright © The odin project 2022</p>
+  </footer>
 </body>
 
 </html>
